update nav bar fixed

--- a/css/newNavandFooter.css
+++ b/css/newNavandFooter.css
@@ -1,144 +1,156 @@
 @import url(./reset.css);
 
-*{
-    box-sizing: border-box; 
+* {
+  box-sizing: border-box;
 }
 
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-    font-family: 'Noto Serif TC', 'Noto Serif', serif;
-    font-size: 16px;
-    color: #1C1C1C;
-    line-height: 1.2;
-    letter-spacing: 0.1em;
-  }
-  
+  font-family: "Noto Serif TC", "Noto Serif", serif;
+  font-size: 16px;
+  color: #1c1c1c;
+  line-height: 1.2;
+  letter-spacing: 0.1em;
+}
+
 #wrap {
-    width: 100%;
-    margin: 0 auto;
+  width: 100%;
+  margin: 0 auto;
+}
+
+a {
+  color: #1c1c1c;
+  text-decoration: none;
+}
+
+h2 {
+  font-size: 3.5rem;
+  font-weight: bold;
+  letter-spacing: 10px;
+}
+
+h3 {
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 20px;
+  color: #a6c609;
+  letter-spacing: 5px;
+}
+
+:root {
+  --nav-height: 80px;
+}
+
+@media screen and (max-width: 767.98px) {
+  h2 {
+    font-size: 2.5rem;
+    letter-spacing: 0;
   }
-
-a{
-    color: #1C1C1C;;
-    text-decoration: none;
 }
 
-h2{
-    font-size: 3.5rem;
-    font-weight: bold;
-    letter-spacing: 10px;
-}
-
-h3{
-    font-size: 2rem;
-    font-weight: bold;
-    padding: 20px;
-    color: #A6C609;
-    letter-spacing: 5px;
-}
-
-:root{
-    --nav-height: 80px;
-}
-
-@media screen and (max-width:767.98px){
-    h2{
-        font-size: 2.5rem;
-        letter-spacing: 0;
-    }
-}
 /* ------------------ nav bar -------------------*/
+.fixed {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: whitesmoke;
+}
+
 .header {
-    position: relative;
-    display: flex;
-    justify-content: center;
+  position: relative;
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+  text-align: center;
+}
+
+.header .logo {
+  display: block;
+  padding: 5px;
+  margin-left: 10px;
+}
+
+.header .logo img {
+  width: 70px;
+}
+
+@media screen and (max-width: 991.98px) {
+  .header {
+    height: var(--nav-height);
     width: 100%;
-    text-align: center;
   }
 
-.header .logo{
-    display: block;
+  .header .logo {
+    position: absolute;
+    top: 0;
+    left: 5px;
+
     padding: 5px;
     margin-left: 10px;
+  }
 }
 
-.header .logo img{
-    width: 70px;
-}
-
-@media screen and (max-width: 991.98px){
-    .header{
-        height: var(--nav-height);
-        width: 100%;
-    }
-    
-    .header .logo{
-        position: absolute;
-        top: 0;
-        left: 5px;
-    }
-}
-
-.header .menu{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    width: 100%;
+.header .menu {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  width: 100%;
 }
 
 .header .menu a {
-    display: block;
-    font-weight: bold;
-    padding: 10px;
-    text-decoration: none;
+  display: block;
+  font-weight: bold;
+  padding: 10px;
+  text-decoration: none;
 }
 
-.header .menuresponsive{
-    display: none;
+.header .menuresponsive {
+  display: none;
 }
 
-.header .header_icon{
-    width: fit-content;
-    align-items: center;
-    display: flex;
+.header .header_icon {
+  width: fit-content;
+  align-items: center;
+  display: flex;
 }
 
-.header .header_icon i{
-    font-size: 30px;
-    color: #1C1C1C;
-    line-height: 80px;
-    margin-right: 10px;
-    align-items: center;
-    float: right;
+.header .header_icon i {
+  font-size: 30px;
+  color: #1c1c1c;
+  line-height: 80px;
+  margin: 0 10px;
+  align-items: center;
+  float: right;
 }
-     
+
 .header .menu a:hover,
-.header .header_icon i:hover{
-    color: #BF5B04;
+.header .header_icon i:hover {
+  color: #bf5b04;
 }
 
-@media screen and (max-width: 991.98px){
-    .header .menu {        
-        width: 80%;
-        margin-left: 100px;
-    }
-    
-    .header .menu a {
-        font-weight: bold;
-        font-size: 14px;
-    }
+@media screen and (max-width: 991.98px) {
+  .header .menu {
+    width: 80%;
+    margin-left: 100px;
+  }
+
+  .header .menu a {
+    font-weight: bold;
+    font-size: 14px;
+  }
 }
 
 @media screen and (max-width: 800px) {
-    .header {
-        position: relative;
-    }
-    .header .menu {        
-        /* display: flex;
+  .header {
+    position: relative;
+  }
+  .header .menu {
+    /* display: flex;
         flex-direction: column;
 
         position: fixed;
@@ -152,62 +164,62 @@ h3{
         transition: all .3s;
         cursor: pointer; */
 
-        display: none;
-      }
+    display: none;
+  }
 
-    .header .menuresponsive{
-        position: absolute; 
-        display: flex; 
-        flex-direction: column;
-        z-index: 1000;
-        top: var(--nav-height);
-        width: 100%;
-        margin: 0 auto;
-    }
+  .header .menuresponsive {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    z-index: 1000;
+    top: var(--nav-height);
+    width: 100%;
+    margin: 0 auto;
+  }
 
-    .header .menuresponsive a{
-        background-color: whitesmoke;
-        padding: 10px;
-    }
+  .header .menuresponsive a {
+    background-color: whitesmoke;
+    padding: 10px;
+  }
 
-    .header .menuresponsive a:hover{
-        border:1px dashed #BF5B04;
-        color: #1C1C1C;
-    }
+  .header .menuresponsive a:hover {
+    border: 1px dashed #bf5b04;
+    color: #1c1c1c;
+  }
 }
 
 /* --------------- hamburger btn ----------------*/
 .header .icon {
-    display: none;
-    font-size: 30px;
-    padding: 10px;
-    align-self: center;
+  display: none;
+  font-size: 30px;
+  padding: 10px;
+  align-self: center;
 }
 
-.header .icon:hover{
-    color: #1C1C1C;
+.header .icon:hover {
+  color: #1c1c1c;
 }
 
-@media screen and (max-width: 800px){
-    .header .icon{
-        position: absolute;
-        display: block;
-        right: 0;
-    }
+@media screen and (max-width: 800px) {
+  .header .icon {
+    position: absolute;
+    display: block;
+    right: 0;
+  }
 }
 
 /* --------------- 喝酒不開車 ----------------*/
-.warning{
-    background-image: url(../index/warning400.svg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 60%;
-    background-color: white;
-    position: sticky;
-    bottom: 0;
-    height: 60px;
-    width: 100%;
-    margin: 0 auto;
+.warning {
+  background-image: url(../index/warning400.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 60%;
+  background-color: white;
+  position: sticky;
+  bottom: 0;
+  height: 60px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 /* @media screen and (max-width: 991px){
@@ -217,89 +229,90 @@ h3{
     }
 } */
 
-@media (min-width:320px) and (max-width:575.98px){
-    .warning{
-        background-size: 70%;
-    }
+@media (min-width: 320px) and (max-width: 575.98px) {
+  .warning {
+    background-size: 70%;
+  }
 }
 
 /* ---------------- footer -----------------*/
-.footer{
+.footer {
+  width: 100%;
+}
+
+.footer_inner {
+  display: flex;
+  margin-bottom: 10px;
+  justify-content: center;
+}
+
+.footer_inner p {
+  line-height: 30px;
+}
+
+.footer_icon {
+  display: flex;
+}
+
+.fa-facebook-f:before,
+.fa-instagram:before {
+  font-size: 25px;
+  margin: 5px;
+}
+
+@media screen and (max-width: 991px) {
+  .footer_inner {
+    display: inline-block;
     width: 100%;
-}
+  }
 
-.footer_inner{
-    display: flex;
-    margin-bottom: 10px;
+  .footer_inner p {
+    text-align: center;
+  }
+
+  div.footer_icon {
+    margin-top: 10px;
     justify-content: center;
-}
-
-.footer_inner p{
-    line-height: 30px;
-}
-
-.footer_icon{
-    display: flex;
-}
-
-.fa-facebook-f:before, .fa-instagram:before{
-    font-size: 25px;
-    margin: 5px;
-}
-
-@media screen and (max-width: 991px){
-    .footer_inner{
-        display: inline-block;
-        width: 100%;
-    }
-
-    .footer_inner p{
-     text-align: center;
-    }
-
-    div.footer_icon{
-        margin-top: 10px;
-        justify-content: center;
-    }
+  }
 }
 
 /* ---------------- go to top btn -----------------*/
 #topBtn {
-    background-color: transparent;
-    position: fixed; 
-    bottom: 50px; 
-    right: 40px; 
-    z-index: 99; 
-    border: none; 
-    outline: none;
-    
-    display: none;
-  }
-  
-  #topBtn i{
-      background-color: transparent;
-      font-size: 40px;
-  }
+  background-color: transparent;
+  position: fixed;
+  bottom: 50px;
+  right: 40px;
+  z-index: 99;
+  border: none;
+  outline: none;
 
-  #topBtn:hover {
-    color: #D98E04;
-  }
-
-@media screen and (max-width: 991.98px){
-    #topBtn{
-        position: fixed; 
-        bottom: 30px; 
-        right: 20px;
-    }
+  display: none;
 }
 
-@media screen and (min-width: 320px )and (max-width: 850px){
-    #topBtn{
-        position: fixed; 
-        bottom: 80px; 
-        right: 20px;
-    }
-    #topBtn i{
-        font-size: 32px;
-    }
+#topBtn i {
+  background-color: transparent;
+  font-size: 40px;
+}
+
+#topBtn:hover {
+  color: #d98e04;
+}
+
+@media screen and (max-width: 991.98px) {
+  #topBtn {
+    position: fixed;
+    bottom: 30px;
+    right: 20px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 850px) {
+  #topBtn {
+    position: fixed;
+    bottom: 80px;
+    right: 20px;
+  }
+  #topBtn i {
+    font-size: 32px;
+  }
 }
