--- a/css/product_style.css
+++ b/css/product_style.css
@@ -1,3 +1,33 @@
+/* ------------------ list cart -------------------*/
+.listCart{
+  position: absolute;
+  /* top: 80px; */
+  /* min-height: 10rem; */
+  width: 300px;
+  background: whitesmoke;
+  top: var(--nav-height);
+  right: 0;
+  transition: all 0.3s ease-in-out;
+  background: rgba(255, 255, 255, 0.5);
+  /* width: 0; */
+  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.listCart .list-item{
+  display: flex;
+  /* justify-content: space-around; */
+  /* position:absolute; */
+  /* top: var(--nav-height); */
+}
+
+.listCart .list-item img{
+  height: 100px;
+}
+
 /* ------------------ top_banner -------------------*/
 .top_banner {
   background-image: url(../Product/product_banner_new.jpg);
