--- a/css/product_style.css
+++ b/css/product_style.css
@@ -1,29 +1,25 @@
 /* ------------------ list cart -------------------*/
 .listCart{
   position: absolute;
-  /* top: 80px; */
-  min-width: 320px;
-  background: whitesmoke;
   top: var(--nav-height);
   right: 0;
-  transition: all 0.3s ease-in-out;
-  background: rgba(255, 255, 255, 0.5);
+  min-width: 320px;
+  background: whitesmoke;
+  transition: all .3s ease-in-out;
   /* width: 0; */
-  overflow: hidden;
-  background-color: whitesmoke;
-  /* display: none; */
+  /* overflow: hidden; */
+  display: none;
 }
 
-.show-listCart{
+/* .show-listCart{
   width: 18rem;
   padding: 2rem 1.5rem;
   transform: rotateY(-360deg);
   height: fit-content;
-}
+} */
 
 .listCart .list-row-title{
   padding: 10px;
-  
 }
 
 .listCart .list-row-title span{
@@ -68,6 +64,12 @@
 }
 
 .send-Btn input{
+  cursor: pointer;
+}
+
+.listCart .listClose{
+  float: right;
+  padding: 10px;
   cursor: pointer;
 }
 
