--- a/css/product_style.css
+++ b/css/product_style.css
@@ -188,8 +188,22 @@
   margin-right: 50px;
 }
 
+@media screen and (max-width: 576.98px) {
+  .itemContainer img {
+    width: 100px;
+    margin-right: 30px;
+  }
+}
+
 .itemContainer .itemInnerText{
   width: 450px;
+}
+
+@media screen and (max-width: 576.98px) {
+  .itemContainer .itemInnerText {
+    width: 400px;
+    font-size: 14px;
+  }
 }
 
 .itemContainer .itemInnerText p{
@@ -322,8 +336,9 @@
     margin-top: 100px;
   }
 }
-
 */
+
+
 .shop-item-btn{
   width: 150px;
   background-color: #1c1c1c;
