--- a/css/list.css
+++ b/css/list.css
@@ -27,10 +27,17 @@
     }
 }
 
+@media (min-width: 320px) and (max-width: 576.98px) {
+    .listContent{
+        width: 100%;
+        font-size: 14px;
+    }
+}
+
 .productsInList{
     width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
 }
 
@@ -80,12 +87,12 @@
 }
 
 @media (max-width:767.98px) {
-    .productsInList .products ion-icon{
+    /* .productsInList .products ion-icon{
         font-size: 44px;
-    }
+    } */
 
     .productsInList .products img{
-        margin: 0 20px;
+        margin: 0;
     }
 }
 
